Added cloudinary upload implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/setup
 server.servlet.contextPath=/slider
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+
+#====== CLOUDINARY CONFIG ==========
