--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/setup
 server.servlet.contextPath=/slider
+spring.application.name=slider
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 
 #====== CLOUDINARY CONFIG ==========
+# Cloudinary Configuration
+cloudinary.cloudName=${CLOUDINARY_NAME}
+cloudinary.api.key=${CLOUDINARY_API_KEY}
+cloudinary.api.secret=${CLOUDINARY_API_SECRET}
+
+
+#========= GOOGLE DRIVE API CONFIG ========
+google.service.account.key=classpath:keys/service.json
+google.drive.parent.id=${PARENT_ID:1ivOHUT91AZcSYuAaHxwVnwyldmITvnBr}
+
