Refactor file upload to be asynchronous

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/setup
+spring.data.mongodb.uri=mongodb://mongo:Ag1b46cFeDf2bC2GAf2fgbfGE6F6b-Da@roundhouse.proxy.rlwy.net:14828/test?authSource=admin&authMechanism=SCRAM-SHA-1
+
+#spring.data.mongodb.username=mongo
+#spring.data.mongodb.password=Ag1b46cFeDf2bC2GAf2fgbfGE6F6b-Da
+#spring.data.mongodb.host=roundhouse.proxy.rlwy.net
+#spring.data.mongodb.database=test
+#spring.data.mongodb.port=14828
 server.servlet.contextPath=/slider
 spring.application.name=slider
 
@@ -8,9 +14,9 @@ spring.servlet.multipart.max-request-size=50MB
 
 #====== CLOUDINARY CONFIG ==========
 # Cloudinary Configuration
-cloudinary.cloudName=${CLOUDINARY_NAME}
-cloudinary.api.key=${CLOUDINARY_API_KEY}
-cloudinary.api.secret=${CLOUDINARY_API_SECRET}
+#cloudinary.cloudName=${CLOUDINARY_NAME}
+#cloudinary.api.key=${CLOUDINARY_API_KEY}
+#cloudinary.api.secret=${CLOUDINARY_API_SECRET}
 
 
 #========= GOOGLE DRIVE API CONFIG ========
